--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ body {
   border-radius: 5px;
   padding: 1rem 0.5rem;
   font-family: inherit;
-  font-size: 1rem;
+  font-size: 0.9rem;
   letter-spacing: inherit;
 }
 
@@ -64,6 +64,19 @@ body {
 
 #custom-tip-btn{
   width: 200px;
+}
+
+#custom-tip-section {
+  margin: 0 auto;
+  margin-bottom: 2rem;
+  padding: 1rem 0.5rem;
+  border: 2px solid #ececec;
+  width: 12rem;
+  border-radius: 5px;
+}
+
+#custom-tip-val {
+  width: 11rem;
 }
 
 #totals-section {
@@ -101,4 +114,48 @@ body {
   height: 10rem;
   transform: translateY(15px);
   transition: all ease 0.3s;
+}
+
+#pct-amt-tip-btns {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 0 auto;
+  height: 2rem;
+  width: 5rem;
+  border: 2px solid #ececec;
+  border-radius: 20px;
+  
+}
+
+.pct-amt-btn {
+  font-family: inherit;
+  font-weight: 600;
+  border: none;
+  background-color: white;
+  color: rgba(233, 184, 114, 1);
+  flex: 1 1 auto;
+  transition: all ease-in 0.2s;
+  justify-items: center;
+}
+
+.pct-amt-btn:hover, .pct-amt-btn-clicked {
+  background-color: rgba(233, 184, 114, 1);
+  color: white;
+  transform: scale(1.1);
+  cursor: pointer;
+}
+
+#pct-btn {
+  font-size: 1rem;
+  border-right: 1px solid #ececec;
+  border-radius: 20px 0 0 20px;
+  line-height: 2rem;
+}
+
+#amt-btn {
+  font-size: 1rem;
+  line-height: 2rem;
+  border-left: 1px solid #ececec;
+  border-radius: 0 20px 20px 0;
 }
